<resources>
    <string name="app_name">Warehouse</string>
    <string name="who_are_you">Who are you???</string>
    <string name="i_am">I am</string>
    <string name="you_want_to">You want to</string>
    <string name="btn_text_borrow">借用</string>
    <string name="btn_text_back">歸還</string>
    <string name="btn_text_search">查詢</string>
    <string name="btn_text_subscription">預約</string>
    <string name="btn_text_cancel_subscription">取消預約</string>
    <string name="btn_text_submit">提交</string>

    <string name="subscription_date">預約日期</string>
    <string name="borrow_date">借用日期</string>
    <string name="user_name">姓名</string>
    <string name="borrow_item">借用項目</string>
    <string name="return_item">歸還項目</string>
    <string name="subscribe_item">預約項目</string>

    <string name="txt_qr_code_scan">Scan QR Code</string>
    <string name="txt_welcome">Welcome　</string>
    <string name="txt_index">編號：</string>
    <string name="txt_classification">品項：</string>
    <string name="txt_user">使用者：</string>
    <string name="txt_date">借用日期：</string>
    <string name="txt_return_date">歸還日期：</string>
    <string name="txt_estimated_time_of_return">預計歸還日期：</string>
    <string name="txt_subscribe_date">預約使用日期：</string>
    <string name="txt_status">狀態：</string>
    <string name="txt_subscriber">預約者：</string>

    <string name="status_return">已歸還</string>
    <string name="status_borrow">已借用</string>
    <string name="status_subscribe">已預約</string>

    <string name="dialog_title_error">錯誤</string>
    <string name="dialog_title_inform">通知</string>
    <string name="dialog_message_network_error">請確認您的網路連線是否正常</string>
    <string name="dialog_message_scan_result_error">項目名稱錯誤</string>
    <string name="dialog_message_turn_to_subscribe">已被借用，但尚未被預約，請問您是否要預約?</string>
    <string name="dialog_message_return_error">未被借用，您無法歸還</string>
    <string name="dialog_message_borrow_fail">尚未歸還，且已有預約者</string>
    <string name="dialog_message_borrow_success">已完成借用！</string>
    <string name="dialog_message_return_success">已完成歸還！</string>
    <string name="dialog_message_subscribe_success">已完成預約！</string>
    <string name="dialog_message_cancel_success">已完成取消！</string>
    <string name="dialog_message_no_data">尚未選擇項目</string>
    <string name="dialog_button_check">確定</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="dialog_message_return_user_error">不是你借用的\n不可以幫別人歸還！！</string>
    <string name="dialog_message_subscribe_user_error">當前時間內無法預約！！</string>
    <string name="dialog_message_not_subscriber">已有人預約，您不是預約者</string>
    <string name="dialog_message_nothing_can_subscribe">目前沒有線材可以預約</string>
    <string name="dialog_message_nothing_can_cancel_subscription">您沒有任何預約項目可以取消</string>
    <string name="dialog_message_return_date_earlier_than_borrow_date">歸還時間不可以早於借用時間</string>
    <string name="dialog_message_subscribe_date_error1">的預計歸還時間為:</string>
    <string name="dialog_message_subscribe_date_error2">\n您預約借用的時間此項目尚未歸還，請另選其他時間。</string>

    <string-array name="search_type">
        <item>品項</item>
        <item>使用者</item>
        <item>狀態</item>
    </string-array>


</resources>
