<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/listview_shape">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_index"
            android:textColor="#4400CC"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtIndex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text=""
            android:textColor="#4400CC"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_status"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text=""
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_classification"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text=""
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_date"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="4"
            android:textSize="20sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_estimated_time_of_return"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtEstimatedTimeReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="4"
            android:textSize="20sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_return_date"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtReturnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="4"
            android:textSize="20sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_user"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="4"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_subscriber"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtSubscriber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text=""
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:text="@string/txt_subscribe_date"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtSubscribeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="4"
            android:textSize="20sp"/>

    </TableRow>

</TableLayout>

